dias presenciais param

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<article>
 					<span>
 						<label>Dias presenciais</label>
-						<input type="number" value="8" min="0" id="diasPresenciais">
+						<input type="number" value="" min="0" id="diasPresenciais">
 					</span>
 					<span>
 						<label>Dias de férias</label>
