--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover">
-		<meta name="description" content="Calcule que horas vc precisa bater o ponto.">
+		<meta name="description" content="Calcule quantos dias você precisa ir presencial.">
 		<link rel="manifest" href="./manifest.json">
 		<link rel="icon" type="image/png" href="./img/icons/favicon-32x32.png" sizes="32x32">
 		<link rel="apple-touch-icon" href="./img/icons/android-chrome-192x192.png">
@@ -14,7 +14,7 @@
 		<meta property="og:image:type" content="image/png" />
 		<meta property="og:image:width" content="512" />
 		<meta property="og:image:height" content="512" />
-		<meta property="og:description" content="Calcule que horas vc precisa bater o ponto.">
+		<meta property="og:description" content="Calcule quantos dias você precisa ir presencial.">
 		<meta name="robots" content="notranslate">
 		<meta name="google" value="notranslate">
 		<title>Cota Presencial</title>
