--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover">
@@ -27,11 +27,11 @@
 			<section>
 				<article>
 					<span>
-						<label>Dias presenciais</label>
+						<label for="diasPresenciais">Dias presenciais</label>
 						<input type="number" value="" min="0" id="diasPresenciais">
 					</span>
 					<span>
-						<label>Dias de férias</label>
+						<label for="diasFerias">Dias de férias</label>
 						<input type="number" value="" min="0" id="diasFerias">
 					</span>
 				</article>
