--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
 					</span>
 				</article>
 			<hr>
-			<footer>
-				&nbsp;
-			</footer>
+			<footer></footer>
 		</main>
 		<script src="./js/main.js"></script>
 	</body>
