--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 						<input type="number" value="" min="0" id="diasPresenciais">
 					</span>
 					<span>
-						<label for="diasFerias">Dias de férias</label>
-						<input type="number" value="" min="0" id="diasFerias">
+						<label for="diasAusentes">Dias ausentes</label>
+						<input type="number" value="" min="0" id="diasAusentes">
 					</span>
 				</article>
 			<hr>
