--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 			<section>
 				<article>
 					<span>
-						<label for="diasPresenciais">Dias presenciais</label>
+						<label for="diasPresenciais">Dias presenciais obriogatórios</label>
 						<input type="number" value="" min="0" id="diasPresenciais">
 					</span>
 					<span>
-						<label for="diasAusentes">Dias ausentes</label>
+						<label for="diasAusentes">Dias que estarei ausentes</label>
 						<input type="number" value="" min="0" id="diasAusentes">
 					</span>
 				</article>
