--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<input type="number" value="" min="0" id="diasPresenciais">
 					</span>
 					<span>
-						<label for="diasAusentes">Dias que estarei ausentes</label>
+						<label for="diasAusentes">Dias que estarei ausente</label>
 						<input type="number" value="" min="0" id="diasAusentes">
 					</span>
 				</article>
